Remove Campus Info Section and fix Spacing

--- a/styles/sass/ui/content-section/content-section.scss
+++ b/styles/sass/ui/content-section/content-section.scss
@@ -60,9 +60,9 @@
         }
     }
 
-    &.transparent {
+    // &.transparent {
         
-    }
+    // }
 
     &.light-blue {
         background: $light-blue;
