--- a/styles/sass/ui/positioning.scss
+++ b/styles/sass/ui/positioning.scss
@@ -26,6 +26,13 @@
 }
 
 //**************************************************
+// VERTICAL PADDING
+//**************************************************/
+.add-vertical-padding--top {
+    margin-top: $vertical-padding;
+}
+
+//**************************************************
 // HEIGHTS
 //**************************************************/
 .full-height {
