--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2220,6 +2220,9 @@ div.content-section.transparent:last-child {
 .no-bottom-margin {
   margin-bottom: 0 !important; }
 
+.add-vertical-padding--top {
+  margin-top: 72px; }
+
 .full-height {
   height: 100%;
   min-height: inherit; }
